<resources>
    <string name="app_name">FaceBook</string>
    <string name="action_settings">Settings</string>
    <string name="profile_owner_name">profileOwnerName</string>
    <string name="profile_owner_img">profile_owner_img</string>
    <string name="sender_photo">sender_photo</string>
    <string name="sender_last_msg">sender_last_msg</string>
    <string name="message_sender_name">Message sender name</string>
    <string name="ic_online">ic_online</string>
    <string name="ic_offline">ic_offline</string>
    <string name="ic_msger">ic_msger</string>
    <string name="msg_count">msg_count</string>
</resources>
