<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="@dimen/text_margin"
        android:contentDescription="@string/sender_photo"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/senderName"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:contentDescription="@string/sender_last_msg"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:text="@string/message_sender_name"
        android:textAlignment="viewStart"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#141414"
        android:typeface="normal" />

    <ImageView
        android:id="@+id/ic_online"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_weight="1"
        android:contentDescription="@string/ic_online"
        app:srcCompat="@android:drawable/presence_online"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/ic_offline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_weight="1"
        android:contentDescription="@string/ic_offline"
        app:srcCompat="@android:drawable/presence_offline" />
</LinearLayout>
