<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="2dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/profile_owner_img"
                android:cropToPadding="false"
                android:longClickable="false"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:text="@string/profile_owner_name"
                android:textColor="#F7FFFFFF" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ic_msger"
                    android:layout_width="31dp"
                    android:layout_height="31dp"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/ic_msger"
                    android:maxWidth="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.529"
                    app:srcCompat="@drawable/ic_msger" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="14dp"
                    android:layout_height="15dp"
                    android:layout_gravity="right|end|top"
                    android:background="@drawable/badge_circle"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/msg_count"
                    android:textColor="@android:color/white"
                    android:textSize="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/ic_msger"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/ic_msger"
                    app:layout_constraintTop_toTopOf="@+id/ic_msger" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity" >

            <include
                layout="@layout/fragment_messegeslist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:background="#000000"
        android:backgroundTint="#3B5998"
        android:src="@android:drawable/ic_menu_add"
        android:tint="#00570A0A"
        app:fabSize="auto" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>